horizontal scroll fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -36,3 +38,27 @@
     transform: rotate(360deg);
   }
 }
+
+/* Apply these styles to your global CSS file or component-specific styles */
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Set the minimum height of the body to 100% of the viewport height */
+  margin: 0;
+}
+
+
+
+.content {
+  flex: 1; /* Allow the main content to take up remaining vertical space */
+}
+
+/* .footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  position: sticky;
+  bottom: 0;
+} */
