--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,7 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities'; */
 .mainContainer{
-    position: fixed;
+    
     background: #1c1b1e;
     bottom: 0px;
     left: 0px;
@@ -10,6 +10,7 @@
     flex-direction: column;
     height: 60vh;
     flex-shrink: 0;
+    bottom: 0;
 }
 .container1{
     /* position: absolute; */
